--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       padding: 0 10px 10px 10px;
     }
 
-    .h1 {
+    h1 {
       font-size: 24px;
       font-weight: 700;
       color: hsl(218, 44%, 22%);
@@ -69,8 +69,8 @@
     </div>
 
     <div class="texts">
-      <p class="h1">Improve your front-end skills by building projects</p>
-      <p> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      <h1>Improve your front-end skills by building projects</h1>
+      <p> Scan the QR code to visit Frontend Mentor and take your coding skills to<br>the next level</p>
     </div>
   </main>
 
